tests/paczka2/big_fuzzy/31886230.err
Error in line 4: Ik32PCji7 S408 91,4
Error in line 10: 2QKC A204 82,2
Error in line 18: lb28VyllOFH A204 59,8
Error in line 32: lb28VyllOFH Sq08 97,q
Error in line 44: 2QKC S408 8,4
Error in line 35: lb28VyllOFH S408 21,4
Error in line 50: 44YCn A204 5,6
Error in line 58: 44YCn S408 14,9
Error in line 46: q93lMHLVL S576 155,1
Error in line 59: 44YCn A204 38,9
Error in line 61: 44YCn S408 65,8
Error in line 64: 44YCn S576 93,5
Error in line 79: S408 S408 97,7
Error in line 82: S408 S576 36,4
Error in line 83: S408 S408 44,6
Error in line 84: S408 S576 18,7
Error in line 89: 0rUG7 S576 34,5
Error in line 94: lb28VyllOFH A204 30,6
Error in line 104: lb28VyllOFH S408 67,9
Error in line 103: 0rUG7 A247 26,6
Error in line 107: lb28VyllOFH A247 78,7
Error in line 117: S408 A204 -5,8
Error in line 116: 44YCn A247 12,9
Error in line 118: 44YCn A204 63,6
Error in line 101: q93lMHLVL A204 224,2
Error in line 125: q93lMHLVL S576 31,4
Error in line 143: Ik32PCji7 A247 -1,0
Error in line 146: lb28VyllOFH S576 17,7
Error in line 142: Ik32PCji7 A247 97,4
Error in line 156: 0rUG7 S408 90,5
Error in line 168: 0rUG7 A204 82,0
Error in line 167: S408 A204 26,4
Error in line 192: q93lMHLVL A247 43,3
Error in line 180: Ik32PCji7 S408 29,8
Error in line 194: q93lMHLVL S408 76,2
Error in line 204: 44YCn S576 18,5
Error in line 218: 44YCn S576 97,6
Error in line 221: 44YCn A204 69,4
Error in line 228: Ik32PCji7 S576 36,1
Error in line 217: 2QKC A204 107,5
Error in line 247: 44YCn S576 83,0
